✨ Sistema completo de chatbot con límites y Stripe - Configurar acceso ilimitado para IP del desarrollador - Integrar Stripe con claves reales - Añadir scripts de Stripe a las páginas - Crear páginas de éxito y cancelación - Sistema de 10 consultas gratuitas + pago premium

--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "desarroyo-form",
   "version": "1.0.0",
-  "description": "",
+  "description": "DesArroyo.Tech - Generador de webs y automatizaciones con chatbot inteligente",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Arroyador69/desarroyo-form.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "web",
+    "automation",
+    "n8n",
+    "chatbot",
+    "ai",
+    "stripe",
+    "premium"
+  ],
+  "author": "Alberto Arroyo - DesArroyo.Tech",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Arroyador69/desarroyo-form/issues"
   },
   "homepage": "https://github.com/Arroyador69/desarroyo-form#readme",
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "stripe": "^14.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
