--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "chatbot",
     "ai",
     "stripe",
-    "premium"
+    "premium",
+    "crm",
+    "dashboard"
   ],
   "author": "Alberto Arroyo - DesArroyo.Tech",
   "license": "ISC",
@@ -29,9 +31,12 @@
   "homepage": "https://github.com/Arroyador69/desarroyo-form#readme",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6",
     "stripe": "^14.0.0"
   },
   "devDependencies": {
